added text to html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
 
     <body>
+
+        <h1>Rock, Paper, Scissors Game</h1>
+        <h3>This must be played in the console!</h3>
         <script src="script.js"></script>
     </body>
     
