--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <div id="container">
 
-            <header>
+            <header class="header">
                 <h1>Rock || Paper || Scissors</h1>
             </header>
             
