finished basic layout with no styling

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <h3>Player One</h3>
                     <img src="./img/playerone.jpg" alt="picture of player one">
                         <div class="playeronescore">
+                            <p class="score">00</p>
                         </div>
 
                 </div>
@@ -30,13 +31,30 @@
                     <h3>Player Two</h3>
                     <img src="./img/playertwo.jpg" alt="picture of player two">
                         <div class="playertwoscore">
+                            <p class= score>00</p>
                         </div>
                     
                 </div>
 
             </section>
 
+            <div class="message">
+                <p class="message">TEST MESSAGE</p>
+            </div>
+
+            <section class="options">
+
+                <button class="rock">Rock</button>
+                <button class="paper">Paper</button>
+                <button class="scissors">Scissors</button>
+
+            </section>
+
+
+
         </div>
+
+        
 
         <!-- <script src="script.js"></script> -->
     </body>
