--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
 
         </div>
 
+        <script src="script.js"></script>
         
-
-        <!-- <script src="script.js"></script> -->
     </body>
     
 </html>
