buttons working in console log, no loop, not a full game

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
             </section>
 
-            <div class="message">
-                <p class="message">TEST MESSAGE</p>
+            <div class="messagediv">
+                <p class="messageoption"></p>
             </div>
 
             <section class="options">
@@ -55,7 +55,7 @@
         </div>
 
         <script src="script.js"></script>
-        
+
     </body>
     
 </html>
