working messages but there is an issue with the same button not being able to be pressed twice

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </section>
 
             <div class="messagediv">
-                <p class="messageoption"></p>
+                <p class="resultMessage"></p>
             </div>
 
             <section class="options">
